<resources>
    <string name="app_name">doUI</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="com_parse_ui_logo_content_description">Logo</string>
    <string name="com_parse_ui_progress_dialog_text">Loading...</string>
    <string name="com_parse_ui_username_input_hint">Username</string>
    <string name="com_parse_ui_password_input_hint">Password</string>
    <string name="com_parse_ui_forgot_password_button_label"><u>Forgot password</u></string>
    <string name="com_parse_ui_parse_login_button_label">Log in</string>
    <string name="com_parse_ui_parse_signup_button_label">Sign up</string>
    <string name="com_parse_ui_facebook_login_button_label">Log in with Facebook</string>
    <string name="com_parse_ui_twitter_login_button_label">Log in with Twitter</string>
    <string name="com_parse_ui_email_input_hint">Email</string>
    <string name="com_parse_ui_confirm_password_input_hint">Re-enter password</string>
    <string name="com_parse_ui_name_input_hint">Name</string>
    <string name="com_parse_ui_create_account_button_label">Create account</string>
    <string name="com_parse_ui_no_username_toast">Please enter your username</string>
    <string name="com_parse_ui_no_password_toast">Please enter your password</string>
    <string name="com_parse_ui_parse_login_invalid_credentials_toast">The username and password you entered don\'t match</string>
    <string name="com_parse_ui_parse_login_failed_unknown_toast">Could not log in, please try again later</string>
    <string name="com_parse_ui_facebook_login_failed_toast">Facebook login failed</string>
    <string name="com_parse_ui_twitter_login_failed_toast">Twitter login failed</string>

    <plurals name="com_parse_ui_password_too_short_toast">
        <item quantity="one">Password must be at least %d character long</item>
        <item quantity="other">Password must be at least %d characters long</item>
    </plurals>

    <string name="com_parse_ui_username_taken_toast">Username is already taken, please choose a different one</string>
    <string name="com_parse_ui_reenter_password_toast">Please re-enter your password</string>
    <string name="com_parse_ui_mismatch_confirm_password_toast">Passwords don\'t match, please try again</string>
    <string name="com_parse_ui_no_email_toast">Please enter your email</string>
    <string name="com_parse_ui_invalid_email_toast">Email is invalid, please correct it and try again</string>
    <string name="com_parse_ui_email_taken_toast">Email is already taken, please reset your password instead</string>
    <string name="com_parse_ui_no_name_toast">Please enter your name</string>
    <string name="com_parse_ui_signup_failed_unknown_toast">Could not sign up, please try again later</string>
    <string name="com_parse_ui_login_help_instructions">Enter your email to recover your password</string>
    <string name="com_parse_ui_login_help_email_input_hint">Email</string>
    <string name="com_parse_ui_login_help_submit_button_label">Submit</string>
    <string name="com_parse_ui_login_help_login_again_button_label">Back to Login</string>
    <string name="com_parse_ui_login_help_submit_failed_unknown">Failed to request password reset, please try again</string>
    <string name="com_parse_ui_login_help_email_sent">Please check your email for instructions on how to access your account</string>

    <string name="com_parse_ui_login_warning_layout_missing_username_field">Layout missing username field</string>
    <string name="com_parse_ui_login_warning_layout_missing_password_field">Layout missing password field</string>
    <string name="com_parse_ui_login_warning_layout_missing_login_button">Layout missing login button</string>
    <string name="com_parse_ui_login_warning_layout_missing_signup_button">Layout missing signup button</string>
    <string name="com_parse_ui_login_warning_layout_missing_login_help_button">Layout missing login help button</string>
    <string name="com_parse_ui_login_warning_disabled_username_password_login">Disabled username/password login and signup because of missing layout elements</string>
    <string name="com_parse_ui_login_warning_disabled_facebook_login">Layout missing Facebook login button, disabled Facebook login</string>
    <string name="com_parse_ui_login_warning_disabled_twitter_login">Layout missing Twitter login button, disabled Twitter login</string>
    <string name="com_parse_ui_login_warning_parse_login_failed">"Parse username/password login failed, exception: "</string>
    <string name="com_parse_ui_login_warning_facebook_login_failed">"Facebook login failed, exception: "</string>
    <string name="com_parse_ui_login_warning_twitter_login_failed">"Twitter login failed, exception: "</string>
    <string name="com_parse_ui_login_warning_facebook_login_user_update_failed">"Updating user object after Facebook login failed, exception: "</string>
    <string name="com_parse_ui_login_warning_twitter_login_user_update_failed">"Updating user object after Twitter login failed, exception: "</string>
    <string name="com_parse_ui_login_warning_parse_signup_failed">"Parse signup failed, exception: "</string>
    <string name="com_parse_ui_login_warning_password_reset_failed">"Parse password reset failed, exception: "</string>

    <string name="com_parse_ui_login_dispatch_user_logged_in">"User logged in, starting: "</string>
    <string name="com_parse_ui_login_dispatch_user_not_logged_in">User not logged in, starting ParseLoginActivity</string>
    <string name="partner_email_hint">Partners Email</string>
    <string name="shared_password_hint">Shared password</string>
    <string name="connect_button_label">Connect</string>
    <string name="skip_button_label">Skip</string>
    <string name="connect_to_partner_explanation">Connecting to your partner enables you to set mutual tasks and lists.\nYour shared password will be emailed to your partner.\nIf you were invited by your partner enter the password you recieved in your mail.\n</string>
    <string name="email_sent_to_partner">An email invitation with the shared password was sent to your partner</string>
    <string name="partner_already_connected">This user is already connected to a partner</string>
    <string name="title_task_list">Tasks</string>
    <string name="title_task_detail">Task Detail</string>
    <string name="conneced_to">Connected to</string>
    <string name="partner_not_matching">The email and password do not match the ones your partner filled. Please check your email again.</string>
    <string name="sync_account_type">doUI</string>
    <string name="content_authority">com.ymgeva.doui</string>

    <string name="broadcast_sync_done">com.ymgeva.doui.syncdone</string>
    <string name="ipsum_dolor">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="reminder">Reminder</string>
    <string name="notify">Notify When Done</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="action_add">Add</string>
    <string name="action_edit">Edit</string>
    <string name="action_done">Done</string>
    <string name="title_activity_edit_task">Edit Task</string>
    <string name="enter_date">Enter Date</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="description">Description</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="i_string">Me</string>
    <string name="u_string">You</string>
    <string name="title_activity_shopping_list">Shopping List</string>

    <string name="enter_password_from_mail">Please enter %s\'s email and the password that he emailed you</string>
    <string name="enter_password_for_partner1">Please enter the email of the person you want to share your tasks with.</string>
    <string name="enter_password_for_partner2">The shared password you enter here will be emailed to your partner to fill when he signs up</string>

    <string name="connect_to_partner_fields_empty_warning">Please fill both fields!</string>
    <string name="connect_to_partner_details_dont_match">The email and shared password do not match the ones %s entered, please recheck your email</string>
    <string name="action_shopping">Grocery List</string>
    <string name="urgent">Urgent</string>
    <string name="dismiss">Dismiss</string>
    <string name="snooze">Snooze</string>
    <string name="action_logout">Logout</string>
    <string name="action_connnect_to_partner">Connect to Partner</string>
    <string name="task_done_notification">Your partner has done: %s</string>
    <string name="urgent_task_notification">New or updated task %s</string>
    <string name="urgent_shopping_notification">Need to buy %s!</string>
    <string name="please_relogin">Session expired, Please Relogin</string>
    <string name="ok">OK</string>
    <string name="connect_to_partner_skipped"><![CDATA[When you are ready to connect, press Menu -> Connect to Partner]]></string>
    <string name="login_failed">Login failed for unexpected reason</string>
    <string name="logging_in">Logging in</string>
    <string name="signing_up">Signing Up</string>
    <string name="connected_to_partner">You are now connected to %s.</string>
    <string name="connected_to_partner_text">Go on and set tasks for them!</string>
    <string name="welcome">Welcome to doUI</string>
    <string name="welcome_to_doui">Login to doUI</string>
    <string name="please_login">Please login or create a new account</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Login</string>
    <string name="action_new_user">Sign Up</string>
    <string name="login_error">%s cannot be empty</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
</resources>
