<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ymgeva.doui.tasks.TaskListActivity" >
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="200"
        app:showAsAction="never" />
    <item android:id="@+id/action_connect_to_partner"
        android:title="@string/action_connnect_to_partner"
        android:orderInCategory="300"
        app:showAsAction="never" />
    <item android:id="@+id/action_add"
        android:title="@string/action_add"
        android:icon="@drawable/ic_action_new"
        app:showAsAction="always"/>
    <item android:id="@+id/action_shopping"
        android:title="@string/action_shopping"
        android:icon="@drawable/shopping_cart"
        app:showAsAction="always"/>

</menu>