<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="?android:attr/textAppearanceLarge"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:textIsSelectable="true"
    tools:context="com.ymgeva.doui.tasks.TaskDetailFragment">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_task_title"
        android:textSize="30dp"
        android:hint="@string/title"
        android:gravity="center"/>

    <LinearLayout
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/edit_task_date"
            android:textSize="24dp"
            android:hint="@string/date"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/edit_task_time"
            android:textSize="24dp"
            android:hint="@string/time"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/edit_task_from_image"
            android:src="@drawable/i_image"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="3"
            android:src="@drawable/arrow"
            android:layout_gravity="center"/>
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/edit_task_to_image"
            android:src="@drawable/image_who"/>

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:id="@+id/edit_task_text"
        android:layout_marginTop="16dp"
        android:hint="@string/description"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <com.ymgeva.doui.uiobjects.CheckableImageView
            android:layout_width="16dp"
            android:layout_height="match_parent"
            android:id="@+id/edit_task_reminder_checkbox"
            android:src="@drawable/done_action"
            android:tint="@color/material_blue_grey_800"
            android:alpha="1"

            />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/reminder"
            android:alpha="1"
            android:layout_gravity="bottom"
            android:textSize="16dp"
            />

        <com.ymgeva.doui.uiobjects.CheckableImageView
            android:layout_width="16dp"
            android:layout_height="match_parent"
            android:id="@+id/edit_task_notify_when_done"
            android:alpha="1"
            android:src="@drawable/done_action"
            android:tint="@color/material_blue_grey_800"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/notify"
            android:textSize="16sp"
            android:alpha="1"
            />
    </LinearLayout>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_task_reminder_time"
        android:textSize="16sp"
        android:gravity="center_vertical"

        />

</LinearLayout>
