<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="?android:attr/textAppearanceLarge"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:textIsSelectable="true"
    tools:context="com.ymgeva.doui.tasks.TaskDetailFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/task_detail_title"
        android:textSize="30dp"
        android:text="Task Title"
        android:gravity="center"/>

    <LinearLayout
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/task_detail_date"
            android:textSize="24dp"
            android:text="24/04"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/task_detail_time"
            android:textSize="24dp"
            android:text="16:00"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/task_detail_from_image"
            android:src="@drawable/i_image"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="3"
            android:src="@drawable/arrow"
            android:layout_gravity="center"/>
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/task_detail_to_image"
            android:src="@drawable/u_image"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:id="@+id/task_detail_text"
        android:layout_marginTop="16dp"
        android:text="@string/ipsum_dolor"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="left"
            >
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/task_detail_reminder_checkbox"
                android:text="@string/reminder"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/task_detail_reminder_time"
                android:textSize="16dp"
                android:text="16:00"
                android:gravity="left"
                android:paddingLeft="20dp"/>
        </LinearLayout>

        <CheckBox
            android:layout_gravity="right"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/task_detail_notify_checkbox"
            android:text="@string/notify"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/com_parse_ui_large_vertical_spacing">

        <Button
            android:id="@+id/task_detail_edit_button"
            style="@style/ParseLoginUI.Button"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/edit" />

        <Button
            android:id="@+id/task_detail_done_button"
            style="@style/ParseLoginUI.Button"
            android:layout_height="60dp"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:text="@string/done"
             />
    </LinearLayout>

</LinearLayout>
